# compressor-system

./: .gitignore  CMakeLists.txt  README.md  build-and-run.sh  build.sh  create_test_files.sh  results.csv  run.sh
docs/: DEVELOPMENT.md  TECHNICAL.md
src/: main.cpp  web_server.cpp
src/algorithms/custom_hybrid/: hybrid_algorithm.cpp  hybrid_algorithm.hpp
src/algorithms/huffman/: huffman_algorithm.cpp  huffman_algorithm.hpp
src/algorithms/lz77/: lz77_algorithm.cpp  lz77_algorithm.hpp
src/algorithms/qfnc/: CMakeLists.txt  qfnc_algorithm.cpp  qfnc_algorithm.hpp
src/algorithms/rle/: rle_algorithm.cpp  rle_algorithm.hpp
src/benchmark/: benchmark.cpp  benchmark.hpp
src/cli/: cli.cpp  cli.hpp
src/core/: algorithm.cpp  algorithm.hpp  common.hpp
src/utils/: crc.cpp  crc.hpp  file_utils.cpp  file_utils.hpp
test/sample-files/: mixed.txt  structured.txt
web-app/: package-lock.json  package.json
web-app/public/: index.html
web-app/src/: App.js  index.js  override.css
web-app/src/components/: App.js  CompressionDashboard.js  FileUpload.js  FileUploader.js
